--- a/html/changePassword.html
+++ b/html/changePassword.html
@@ -6,7 +6,11 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
-    <link rel="stylesheet" href="../CSS/footer-menu.css">
+    <link rel="stylesheet" href="../CSS/standard.css">
+    <link rel="shortcut icon" type="image/png" href="/img/Logo_EIV.png"/>
+
+    <title>EIV tour</title>
+
     <style>
         .modal-header,
         h4,
@@ -21,11 +25,14 @@
         .modal-body {
             background-color: #f9f9f9;
         }
+        
+        .button {
+            width: 100%;
+        }
     </style>
 </head>
 
 <body>
-
     <div class="container" id="myBt">
         <!-- Modal -->
         <div class="modal fade" id="myModa" role="dialog">
@@ -46,11 +53,11 @@
                                 <label for="usrname"><span class="glyphicon glyphicon-user"></span> Retype new password</label>
                                 <input type="text" class="form-control" id="usrname" placeholder="Enter email">
                             </div>
-                            <button type="submit" class="btn btn-success btn-block"><span class="glyphicon glyphicon-off"  id="myModal"></span>   <a href="./home_index.html">Update</a></button>
+                            <div class="btn btn-lager color button"><a href="./home_index.html">Cập nhật</a></div>
+
                         </form>
                     </div>
                     <div class="modal-footer">
-                        <button type="submit" class="btn btn-danger btn-default pull-left" data-dismiss="modal"><span class="glyphicon glyphicon-remove"></span> Cancel</button>
                         <p>A member? <a href="./signin_email.html">Sign in</a></p>
                         <p><a href="./register.html">Register</a></p>
                     </div>
@@ -59,18 +66,14 @@
             </div>
         </div>
     </div>
-
-    <script>
-        $(document).ready(function() {
-            $("#myBt").show(function() {
-                $("#myModa").modal();
-            });
-            // $("#myModal").click('hidden.bs.modal', function() {
-            //     alert('Successful!');
-            // });
-        });
-    </script>
-
 </body>
+
+<script>
+    $(document).ready(function() {
+        $("#myBt").show(function() {
+            $("#myModa").modal();
+        });
+    });
+</script>
 
 </html>
