--- a/html/provision.html
+++ b/html/provision.html
@@ -5,73 +5,77 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Provision</title>
-
+    <link rel="shortcut icon" type="image/png" href="/img/Logo_EIV.png"/>
     <link rel="stylesheet" href="/CSS/footer-menu.css">
     <link rel="stylesheet" href="/CSS/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" />
     <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
     <script src="/js/main.js" defer></script>
     <script src="/js/loadUser.js" defer></script>
+
+    <title>EIV tour</title>
+
 </head>
 
-<body>
+<body onload=loadUserName()>
     <div class="provision_page page">
         <div id="page__menu"></div>
 
         <div class="page__content">
+            <h2 class="title_upperCase">Điều khoản sử dụng của EIV</h2>
             <h4>Chính sách: “Đảm bảo giá tốt nhất”</h4>
-                <ol>
-                    <li>"Đảm bảo Giá Tốt nhất" của chúng tôi chỉ áp dụng cho các đặt tour đã được xác nhận.</li>
-                    <li>“Đảm bảo giá tốt nhất” không áp dụng cho các đặt chỗ cung cấp phần thưởng chương trình khách hàng thân thiết của bên thứ ba, bao gồm đổi dặm bay thường xuyên hoặc các mức giá chưa được công bố như:
-                        <ul class="page__li">
-                            <li>Giá riêng</li>
-                            <li>Giá đóng gói</li>
-                            <li>Phòng khách sạn được bán như một phần của gói du lịch</li>
-                            <li>Các mức giá không áp dụng cho công chúng</li>
-                        </ul>
-                    </li>
-                    <li>EIV có quyền và toàn quyền quyết định tính hợp lệ của bất kỳ yêu cầu nào, bao gồm nhưng không giới hạn, xác định rằng đó là cho cùng một tài sản, loại phòng hoặc ngày tháng và nó đáp ứng tất cả các điều khoản, điều kiện và yêu cầu xử lý khiếu nại.</li>
-                    <li>“Đảm bảo Giá Tốt nhất” của chúng tôi không được kết hợp với các ưu đãi hoặc khuyến mãi khác.</li>
-                    <li>EIV có quyền sửa đổi, điều chỉnh, bổ sung, đình chỉ hoặc chấm dứt “Đảm bảo Giá Tốt nhất” bất cứ lúc nào. Bất kỳ câu hỏi nào liên quan đến khiếu nại phải được chuyển đến nhóm Dịch vụ Khách hàng của chúng tôi.</li>
-                </ol>
-                <h4>Chính sách đăng ký và hủy tour:</h4>
-                <ol>
-                    <li>Đối với tour có vé máy bay
-                        <ul class="page__li">
-                            <li>Đợt 1: Đặt cọc 50% tiền tour/khách ngay khi đăng ký tour.</li>
-                            <li>Đợt 2: Thanh toán tổng số tiền tour còn lại sau khi booking vé máy bay.
-                                <ul>
-                                    <Li>Hủy tour trước ngày khởi hành 10 ngày, chi phí không hoàn lại là 50% giá tour + tiền vé máy bay.</Li>
-                                    <Li>Hủy tour trước ngày khởi hành 5 ngày, chi phí không hoàn lại là 70% giá tour + tiền vé máy bay.</Li>
-                                    <Li>Hủy tour trước ngày khởi hành 3 ngày, chi phí không hoàn lại là 90% giá tour + tiền vé máy bay.</Li>
-                                    <Li>Hủy tour trong vòng 48 giờ trước ngày khởi hành, chi phí không hoàn lại là 100%.</Li>
-                                    <Li>Thời gian hủy tour được tính cho ngày làm việc, không tính thứ bảy, chủ nhật và các ngày Lễ, Tết.</Li>
-                                    <Li> Quý khách hủy tour sẽ bị phạt 100% vé máy bay</Li>
-                                </ul>
-                            </li>
-                        </ul>
-                    </li>
-                    <li>Đối với tour không có vé máy bay
-                        <ul class="page__li">
-                            <li>Đợt 1: Đặt cọc 50% tiền tour/khách ngay khi đăng ký tour.</li>
-                            <li>Đợt 2: Thanh toán tổng số tiền tour còn lại trước ngày đi 10 ngày.
-                                <ul>
-                                    <Li>Hủy tour trước ngày khởi hành 10 ngày, chi phí không hoàn lại là 50% giá tour.</Li>
-                                    <Li>Hủy tour trước ngày khởi hành 5 ngày, chi phí không hoàn lại là 70% giá tour.</Li>
-                                    <Li>Hủy tour trước ngày khởi hành 3 ngày, chi phí không hoàn lại là 90% giá tour</Li>
-                                    <Li>Hủy tour trong vòng 48 giờ trước ngày khởi hành, chi phí không hoàn lại là 100%.</Li>
-                                    <Li>Thời gian hủy tour được tính cho ngày làm việc, không tính thứ bảy, chủ nhật và các ngày Lễ, Tết.</Li>
-                                    <Li>Nếu khách có nhu cầu đổi ngày, công ty sẽ kiểm tra ngày và báo chi phí đổi tùy vào thời điểm đặt tour trong năm.</Li>
-                                </ul>
-                            </li>
-                        </ul>
-                    </li>
-                </ol>
-                <h5>Với những chính sách ở trên EIV mong rằng các bạn sẽ tận hưởng hết mức chuyến du lịch của mình. </h5>
+            <ol>
+                <li>"Đảm bảo Giá Tốt nhất" của chúng tôi chỉ áp dụng cho các đặt tour đã được xác nhận.</li>
+                <li>“Đảm bảo giá tốt nhất” không áp dụng cho các đặt chỗ cung cấp phần thưởng chương trình khách hàng thân thiết của bên thứ ba, bao gồm đổi dặm bay thường xuyên hoặc các mức giá chưa được công bố như:
+                    <ul class="page__li">
+                        <li>Giá riêng</li>
+                        <li>Giá đóng gói</li>
+                        <li>Phòng khách sạn được bán như một phần của gói du lịch</li>
+                        <li>Các mức giá không áp dụng cho công chúng</li>
+                    </ul>
+                </li>
+                <li>EIV có quyền và toàn quyền quyết định tính hợp lệ của bất kỳ yêu cầu nào, bao gồm nhưng không giới hạn, xác định rằng đó là cho cùng một tài sản, loại phòng hoặc ngày tháng và nó đáp ứng tất cả các điều khoản, điều kiện và yêu cầu xử lý khiếu nại.</li>
+                <li>“Đảm bảo Giá Tốt nhất” của chúng tôi không được kết hợp với các ưu đãi hoặc khuyến mãi khác.</li>
+                <li>EIV có quyền sửa đổi, điều chỉnh, bổ sung, đình chỉ hoặc chấm dứt “Đảm bảo Giá Tốt nhất” bất cứ lúc nào. Bất kỳ câu hỏi nào liên quan đến khiếu nại phải được chuyển đến nhóm Dịch vụ Khách hàng của chúng tôi.</li>
+            </ol>
+            <h4>Chính sách đăng ký và hủy tour:</h4>
+            <ol>
+                <li>Đối với tour có vé máy bay
+                    <ul class="page__li">
+                        <li>Đợt 1: Đặt cọc 50% tiền tour/khách ngay khi đăng ký tour.</li>
+                        <li>Đợt 2: Thanh toán tổng số tiền tour còn lại sau khi booking vé máy bay.
+                            <ul>
+                                <Li>Hủy tour trước ngày khởi hành 10 ngày, chi phí không hoàn lại là 50% giá tour + tiền vé máy bay.</Li>
+                                <Li>Hủy tour trước ngày khởi hành 5 ngày, chi phí không hoàn lại là 70% giá tour + tiền vé máy bay.</Li>
+                                <Li>Hủy tour trước ngày khởi hành 3 ngày, chi phí không hoàn lại là 90% giá tour + tiền vé máy bay.</Li>
+                                <Li>Hủy tour trong vòng 48 giờ trước ngày khởi hành, chi phí không hoàn lại là 100%.</Li>
+                                <Li>Thời gian hủy tour được tính cho ngày làm việc, không tính thứ bảy, chủ nhật và các ngày Lễ, Tết.</Li>
+                                <Li> Quý khách hủy tour sẽ bị phạt 100% vé máy bay</Li>
+                            </ul>
+                        </li>
+                    </ul>
+                </li>
+                <li>Đối với tour không có vé máy bay
+                    <ul class="page__li">
+                        <li>Đợt 1: Đặt cọc 50% tiền tour/khách ngay khi đăng ký tour.</li>
+                        <li>Đợt 2: Thanh toán tổng số tiền tour còn lại trước ngày đi 10 ngày.
+                            <ul>
+                                <Li>Hủy tour trước ngày khởi hành 10 ngày, chi phí không hoàn lại là 50% giá tour.</Li>
+                                <Li>Hủy tour trước ngày khởi hành 5 ngày, chi phí không hoàn lại là 70% giá tour.</Li>
+                                <Li>Hủy tour trước ngày khởi hành 3 ngày, chi phí không hoàn lại là 90% giá tour</Li>
+                                <Li>Hủy tour trong vòng 48 giờ trước ngày khởi hành, chi phí không hoàn lại là 100%.</Li>
+                                <Li>Thời gian hủy tour được tính cho ngày làm việc, không tính thứ bảy, chủ nhật và các ngày Lễ, Tết.</Li>
+                                <Li>Nếu khách có nhu cầu đổi ngày, công ty sẽ kiểm tra ngày và báo chi phí đổi tùy vào thời điểm đặt tour trong năm.</Li>
+                            </ul>
+                        </li>
+                    </ul>
+                </li>
+            </ol>
+            <h5>Với những chính sách ở trên EIV mong rằng các bạn sẽ tận hưởng hết mức chuyến du lịch của mình. </h5>
         </div>
 
         <div id="page__footer"></div>
+        
     </div>
 </body>
 
