--- a/html/tour.html
+++ b/html/tour.html
@@ -5,32 +5,38 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-    <link rel="stylesheet" href="/CSS/footer-menu.css">
+    <link rel="stylesheet" href="/CSS/standard.css">
     <link rel="stylesheet" href="../CSS/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" />
-    <title>Tour</title>
+    <link rel="shortcut icon" type="image/png" href="/img/Logo_EIV.png" />
     <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
     <script src="/js/main.js" defer></script>
+    <title>EIV tour</title>
 </head>
 
-<body onload="loadInforTours(0)">
+<body>
     <div class="tour_page page">
         <div id="page__menu"></div>
+
         <div class="page__content content">
-            <h2 class="title title--header">OUR TOURS</h2>
-
-
-            <!--Phần inforTours xong-->
-
+            <h2 class="title_upperCase">OUR TOURS</h2>
             <div class="page__content">
-                <div class="page__content--tour" id="jsonData">
-
-                </div>
+                <div class="page__content--tour" id="jsonData"></div>
             </div>
         </div>
+
         <div id="page__footer"></div>
     </div>
 </body>
+
+<script>
+    window.onload = function() {
+        var indexColor = document.getElementById('tour_menu');
+        indexColor.style.color = "var(--btnColor1)";
+        indexColor.style.fontWeight = "bold";
+        loadInforTours(0);
+        loadUserName();
+    }
+</script>
 
 </html>
